--- a/server/package.json
+++ b/server/package.json
@@ -24,12 +24,14 @@
     "express": "^4.18.2",
     "firebase": "^10.0.0",
     "firebase-admin": "^11.10.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "pino": "^8.14.1",
     "pino-pretty": "^10.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.4.2",
     "concurrently": "^8.2.0",
     "typescript": "^5.1.6"
