--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "firebase": "^10.0.0",
     "firebase-admin": "^11.10.1",
+    "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "pino": "^8.14.1",
