--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.12.17",
+    "natural": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
