--- a/server/package.json
+++ b/server/package.json
@@ -18,15 +18,19 @@
   "dependencies": {
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "child_process": "^1.0.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.0.0",
     "firebase-admin": "^11.10.1",
+    "gptsummarizer": "^0.0.2",
     "jsonwebtoken": "^9.0.1",
+    "lexrank.js": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "openai": "^3.3.0",
     "pino": "^8.14.1",
     "pino-pretty": "^10.0.1"
   },
